--- a/.project
+++ b/.project
@@ -6,14 +6,6 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
-<<<<<<< HEAD
-=======
-			<name>org.eclipse.xtext.ui.shared.xtextBuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
->>>>>>> bdf4ff2dca5532a379040c705bae52659784d6f8
 			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
 			</arguments>
@@ -21,9 +13,12 @@
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
-<<<<<<< HEAD
-=======
-		<nature>org.eclipse.xtext.ui.shared.xtextNature</nature>
->>>>>>> bdf4ff2dca5532a379040c705bae52659784d6f8
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/application/MainModel.java</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/Desktop/MainModel.java</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
